--- a/User_Interface/WebPages/style_shothistory.css
+++ b/User_Interface/WebPages/style_shothistory.css
@@ -66,18 +66,22 @@ body {
     padding: 0px 0px;
     text-align: center;
     width: 100%;
-    height: 610px;
+    height: 700px;
     overflow: scroll;
   }
   
   .goal_plot img {
-    height: 385px;
+    width: 100%;
+    max-width: 600px;
+    /* min-width: 390px; */
     padding: 0 auto;
     margin: 0 auto;
   }
 
   .field_plot img {
-    height: 1000px;
+    width: 100%;
+    max-width: 600px;
+    /* min-width: 390px; */
     padding: 0 auto;
     margin: 0 auto;
   }
